# sha1sum

./: .travis.yml  CMakeLists.txt  Readme.md  SHA1Sum.h  appveyor.yml  main.cpp
